--- a/.github/workflows/oktaa.yml
+++ b/.github/workflows/oktaa.yml
@@ -6,7 +6,7 @@ jobs:
   build:
 
     runs-on: windows-latest
-    timeout-minutes: 99999
+    timeout-minutes: 999999999
 
     steps:
     - name: Downloading Ngrok.
